--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,11 @@ language: java
 cache:
   directories:
   - "$HOME/.m2"
-#before_install: mvn org.apache.maven.plugins:maven-dependency-plugin:3.1.0:get -DremoteRepositories=https://dl.bintray.com/che4/maven -Dartifact=io.github.che4:target-dev-platform:0.0.4:target -Ddest=my.target
-#before_install: mvn -f menu.releng/pom.xml -P versions
-install: true
-before_script: chmod +x mvnw
+install: 
+  - mvn -N io.takari:maven:wrapper
+before_script:
+  - chmod +x mvnw
 script: >-
-  ./mvnw -f ./menu.releng --global-settings ./.mvn/settings.xml -DforceContextQualifier=$TRAVIS_BUILD_NUMBER &&
-  ./mvnw -f ./menu.releng --global-settings ./.mvn/settings.xml deploy
+  ./mvnw -f ./menu.releng --global-settings ./.tavis/settings.xml -DforceContextQualifier=$TRAVIS_BUILD_NUMBER &&
+  ./mvnw -f ./menu.releng --global-settings ./.travis/settings.xml deploy
 
-
-#mvnw -DnewVersion=0.1.0-SNAPHSOT (Maven profile: changeVersion)
-#mvnw -forceContextQualifier=147 ---> 0.1.147 (Maven profile: set-release-version)
-#mvnw deploy --> deploy (Maven profile: release)
