--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ install:
 before_script:
   - chmod +x mvnw
 script: >-
-  ./mvnw -f ./menu.releng --global-settings ./.travis/settings.xml -DforceContextQualifier=$TRAVIS_BUILD_NUMBER &&
-  ./mvnw -f ./menu.releng --global-settings ./.travis/settings.xml deploy
+  ./mvnw --global-settings ./.travis/settings.xml -DforceContextQualifier=$TRAVIS_BUILD_NUMBER &&
+  ./mvnw --global-settings ./.travis/settings.xml deploy
 
