--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: java
 cache:
   directories:
   - "$HOME/.m2"
-install: 
-  - mvn -N io.takari:maven:wrapper
-before_script:
-  - chmod +x mvnw
+#install: 
+#  - mvn -N io.takari:maven:wrapper
+#before_script:
+#  - chmod +x mvnw
 script: >-
-  ./mvnw --global-settings ./.travis/settings.xml -DforceContextQualifier=$TRAVIS_BUILD_NUMBER &&
-  ./mvnw --global-settings ./.travis/settings.xml deploy
+  maven --global-settings ./.travis/settings.xml -DforceContextQualifier=$TRAVIS_BUILD_NUMBER &&
+  maven --global-settings ./.travis/settings.xml deploy
 
