--- a/che4.i18n/pom.xml
+++ b/che4.i18n/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>io.github.che4</groupId>
 		<artifactId>io.github.che4.p2.categories</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>0.1.5</version>
 	</parent>
 	<artifactId>io.github.che4.p2.categories.che4.i18n</artifactId>
 	<name>Che4 :: category :: che4/i18n</name>
