--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ cache:
 #before_script:
 #  - chmod +x mvnw
 script: >-
-  maven --global-settings ./.travis/settings.xml -DforceContextQualifier=$TRAVIS_BUILD_NUMBER &&
-  maven --global-settings ./.travis/settings.xml deploy
+  mvn --global-settings ./.travis/settings.xml -DforceContextQualifier=$TRAVIS_BUILD_NUMBER &&
+  mvn --global-settings ./.travis/settings.xml deploy
 
